[package]
name = "usb-compat-01-sys"
version = "0.2.1"
description = "Rust bindings for libusb-compat-0.1"
authors = ["Alexander Sagen <alexander@sagen.me>"]
repository = "https://github.com/alexrsagen/rs-usb-compat-01-sys"
readme = "README.md"
license = "MIT"
edition = "2018"
links = "usb-0.1"

[dependencies]
libusb1-sys = { version = "0.5", features = ["vendored"] }

[build-dependencies]
cc = "1.0"
bindgen = "0.58"
pkg-config = "0.3"

[lib]
crate-type = ["rlib", "staticlib"]
